[package]
name = "bot"
version = "0.1.0"
authors = ["Tom Nash <tom@flexdapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = { version = "3", features=["openssl"] }
awc = "2.0.3"
# serenity = { version = "0.10.0", features = ["client"] }
serenity = {version = "0.10.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http"] }
futures = "0.3.14"
serde = "1.0.126"
serde_json = "1.0"
reqwest = "0.11.3"